minor visual changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ playwright = "^1.41.2"
 bs4 = "^0.0.2"
 pandas = "^2.2.0"
 matplotlib = "^3.8.3"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
