--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ bs4 = "^0.0.2"
 pandas = "^2.2.0"
 matplotlib = "^3.8.3"
 seaborn = "^0.13.2"
+scipy = "^1.12.0"
+statsmodels = "^0.14.1"
 
 
 [tool.poetry.group.dev.dependencies]
