--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ matplotlib = "^3.8.3"
 seaborn = "^0.13.2"
 scipy = "^1.12.0"
 statsmodels = "^0.14.1"
+scikit-learn = "^1.4.1.post1"
+pyarrow = "^15.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
