--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ scipy = "^1.12.0"
 statsmodels = "^0.14.1"
 scikit-learn = "^1.4.1.post1"
 pyarrow = "^15.0.0"
+xgboost = "^2.0.3"
+hyperopt = "^0.2.7"
+pkg = "^0.2"
+bayesian-optimization = "^1.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
