--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,22 +6,22 @@ authors = ["Arash"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.9,<3.13"
 httpx = "^0.26.0"
 playwright = "^1.41.2"
 bs4 = "^0.0.2"
-pandas = "^2.2.0"
-matplotlib = "^3.8.3"
+pandas = "<2.1.0"
+matplotlib = "^3.7.0"
 seaborn = "^0.13.2"
-scipy = "^1.12.0"
-statsmodels = "^0.14.1"
+scipy = "^1.10.0"
+statsmodels = ">=0.14.1"
 scikit-learn = "^1.4.1.post1"
 pyarrow = "^15.0.0"
 xgboost = "^2.0.3"
 hyperopt = "^0.2.7"
 pkg = "^0.2"
 bayesian-optimization = "^1.4.3"
-
+pycaret = "^2.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.2"
