Added new tests and expended sets of experiments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ bayesian-optimization = "^1.4.3"
 pycaret = "^2.2"
 optuna = "^3.5.0"
 forex-python = "^1.8"
+lightgbm = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.2"
