--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,13 @@ authors = ["Arash"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
+python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
 httpx = "^0.26.0"
 playwright = "^1.41.2"
 bs4 = "^0.0.2"
 pandas = "<2.1.0"
-matplotlib = "^3.7.0"
+matplotlib = "<3.8.0"
 seaborn = "^0.13.2"
-scipy = "^1.10.0"
 statsmodels = ">=0.14.1"
 scikit-learn = "^1.4.1.post1"
 pyarrow = "^15.0.0"
@@ -26,6 +25,12 @@ forex-python = "^1.8"
 lightgbm = "^4.3.0"
 numpy = "^1.26.4"
 streamlit = "^1.32.2"
+scipy = "<=1.11.4,>=1.6.1"
+kaleido = "0.2.1"
+pycaret = "^3.3.0"
+scikit-optimize = "^0.10.1"
+optuna-integration = "^3.6.0"
+
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.2"
