--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ kaleido = "0.2.1"
 pycaret = "^3.3.0"
 scikit-optimize = "^0.10.1"
 optuna-integration = "^3.6.0"
+dataframe-image = "^0.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
