--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pycaret = "^3.3.0"
 scikit-optimize = "^0.10.1"
 optuna-integration = "^3.6.0"
 dataframe-image = "^0.2.3"
+aiohttp ="^3.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
