--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,5 +1,5 @@
-joblib==1.3.2
-pandas==2.0.3
-pycaret==3.1.0
-streamlit==1.33.0
-scikit-learn==1.2.0
+joblib>1.3.2
+pandas>2.0.3
+pycaret>3.1.0
+streamlit>1.33.0
+scikit-learn>1.2.0
